--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -777,4 +777,8 @@
     <string name="option_restore_cover">Önceki görüntüyü geri yükle</string>
     <string name="info_site_list">Aramalar şunlarla sınırlıdır: %1$s</string>
     <string name="tip_configure_sites">Tek tek web siteleri ekranın üst kısmındaki ayarlar simgesi kullanılarak yapılandırılabilir.</string>
+    <string name="lbl_sort_unsorted">Tasnif Edilmemiş</string>
+    <string name="lbl_sort_ascending">Yükselen</string>
+    <string name="lbl_sort_descending">Alçalma</string>
+    <string name="lbl_group">Grup</string>
 </resources>
