--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -977,6 +977,9 @@
     <!-- [VERIFIED] -->
     <string name="lbl_country">Country</string>
 
+    <!-- Label for a booklist group -->
+    <string name="lbl_group">Group</string>
+
     <!-- Label for the currency used for prices. -->
     <string name="lbl_currency">Currency</string>
     <!-- Official price for a book -->
@@ -1547,7 +1550,15 @@
     <string name="option_delete_removed_books">Delete local books which are no longer present on the server</string>
     <!-- [VERIFIED] -->
     <string name="lbl_system_default">(System default)</string>
+
     <string name="lbl_sorting">Sorting</string>
+    <!-- Sorting unsorted -->
+    <string name="lbl_sort_unsorted">Unsorted</string>
+    <!-- Sorting A-Z -->
+    <string name="lbl_sort_ascending">Ascending</string>
+    <!-- Sorting Z-A -->
+    <string name="lbl_sort_descending">Descending</string>
+
     <!-- Book status/flag -->
     <string name="lbl_read">Read</string>
     <!-- [VERIFIED] - Book status/flag -->
@@ -1602,12 +1613,8 @@
     <string name="X_lbl_folder">Folder</string>
     <!-- endregion -->
 
-    <string name="lbl_sort_unsorted">Unsorted</string>
-    <string name="lbl_sort_ascending">Ascending</string>
-    <string name="lbl_sort_descending">Descending</string>
 
     <string name="pt_bob_book_level_sorting">Book level sorting</string>
-    <string name="lbl_group">Group</string>
 
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
