--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -772,7 +772,7 @@
     <string name="info_nothing_to_do">Non c’è niente da fare.</string>
     <string name="option_restore_cover">Ripristinare l’immagine precedente</string>
     <string name="info_site_list">Le ricerche sono limitate a: %1$s</string>
-    <string name="tip_configure_sites">I singoli siti web possono essere configurati utilizzando l\'icona delle impostazioni nella parte superiore dello schermo.</string>
+    <string name="tip_configure_sites">I singoli siti web possono essere configurati utilizzando l’icona delle impostazioni nella parte superiore dello schermo.</string>
     <string name="lbl_sort_unsorted">Non ordinati</string>
     <string name="lbl_sort_ascending">Ascendente</string>
     <string name="lbl_sort_descending">Discendente</string>
