--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d libro</item>
@@ -63,7 +66,6 @@
     <string name="X_info_authorized_needed">Autorizar acceso</string>
     <string name="X_info_not_authorized">No Autorizado</string>
     <string name="X_info_site_authorization_successful">Autorización satisfactoria en %1$s</string>
-    <string name="X_lbl_about_sourcecode">Código fuente</string>
     <string name="X_lbl_completed">Completado</string>
     <string name="X_lbl_cover_long">Portada</string>
     <string name="X_lbl_delete_book">Eliminar libro</string>
@@ -785,7 +787,7 @@
     <string name="lbl_sort_ascending">Ascendente</string>
     <string name="lbl_sort_descending">Descendente</string>
     <string name="lbl_group">Grupo</string>
-    <string name="pt_bob_book_level_sorting">Valoración del libro</string>
+    <string name="X_pt_bob_book_level_sorting">Valoración del libro</string>
     <string name="pt_layout">Diseño</string>
     <string name="pt_bob_grid_spancount">Columnas de la cuadrícula</string>
     <string name="pe_list">Lista</string>
